# iot-pt

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: Dockerfile  pom.xml
deploy/: .env.dev  .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: STATUS.md  architecture.md  design.md  observability.md  quickstart.md
tools/iot-device-simulator/: README.md  pyproject.toml  run.sh
tools/iot-device-simulator/scripts/: build.sh  dev.sh
tools/iot-device-simulator/src/iot_simulator/: main.py
tools/iot-device-simulator/src/iot_simulator/api/: platform_client.py  thing_model_converter.py
tools/iot-device-simulator/src/iot_simulator/core/: config.py  event_trigger.py  property_gen.py  simulator.py
tools/iot-device-simulator/src/iot_simulator/model/: enums.py  thing_model.py
tools/iot-device-simulator/src/iot_simulator/protocol/: messages.py  mqtt_client.py  tcp_client.py
tools/iot-device-simulator/src/iot_simulator/ui/: main_window.py
tools/iot-device-simulator/src/iot_simulator/ui/dialogs/: platform_import_dialog.py  thing_model_dialog.py
tools/iot-device-simulator/src/iot_simulator/ui/widgets/: connection_panel.py  event_panel.py  log_panel.py  property_panel.py  service_panel.py
tools/iot-device-simulator/src/iot_simulator/utils/: logger.py  storage.py
tools/iot-device-simulator/tests/: test_event_trigger.py  test_platform_client.py  test_property_gen.py  test_thing_model.py  test_thing_model_converter.py
(+484 files in other folders)
